--- a/template.html
+++ b/template.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Wild Rescues: Template</title>
+	<title>Furry Fresh Grooming</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Emblema+One%7cLora&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-	<link rel="icon" sizes="192x192" href="images/android-chrome-192.png">
 </head>
 <body>
     
