--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Furry Fresh Grooming</title>
 	<meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     
