--- a/template.html
+++ b/template.html
@@ -16,11 +16,10 @@
         <nav class="mobile-nav">
             <div id="nav-links">
                 <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="partnership.html">Partnership</a>
+                <a href="contact.html">Contact</a>
+                <a href="services.html">Services</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="faqs.html">FAQs</a>
-                <a href="contact.html">Contact Us</a>
             </div>
             <a class="nav-icon" onclick="menu()">
                 <div id="icon">&#9776;</div>
@@ -40,11 +39,10 @@
         <nav class="tab-desk">
             <ul>
                 <li><a href="index.html">Home</a></li>  
-                <li><a href="about.html">About Us</a></li> 
-                <li><a href="partnership.html">Partnership</a></li> 
+                <li><a href="contact.html">Contact</a></li> 
+                <li><a href="services.html">Services</a></li> 
                 <li><a href="gallery.html">Gallery</a></li> 
-                <li><a href="faqs.html">FAQs</a></li> 
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
             </ul>
         </nav>
 
