--- a/template.html
+++ b/template.html
@@ -27,12 +27,9 @@
 		</nav> 
 		
 		<header>
-            <div class="tab-desk">
-              <a href="index.html"><img src="images/baby-hawk.jpg" alt="rescued baby hawk"></a>
-            </div>
             <div class="mobile">
-                <h1>&#128062; Wild Rescues</h1>
-                <h3>Rescue. Rehabilitate. Release.</h3>
+                <h1>&#128062; Furry Fresh Grooming</h1>
+                <h3>Because every pup deserves to shine</h3>
             </div>
         </header>
 
