--- a/template.html
+++ b/template.html
@@ -55,7 +55,7 @@
          
             <div class="copyright">
                 <p>&copy; Copyright 2024. All Rights Reserved.</p>
-                <p><a href="mailto:contact@wildrescues.net">contact@wildrescues.net</a></p>
+                <p><a href="mailto:furryfreshgrooming@gmail.com">furryfreshgrooming@gmail.com</a></p>
             </div>
             
         </footer>
