--- a/template.html
+++ b/template.html
@@ -34,7 +34,7 @@
               <a href="index.html"><img src="images/furry_logo.png" alt="Furry fresh logo"></a>
             </div>
             <div class="mobile">
-                <h1>&#127580; Furry Fresh Grooming</h1>
+                <h1>Furry Fresh Grooming</h1>
                 <h3>"Because every pup deserves to shine"</h3>
             </div>
         </header>
