--- a/contact.html
+++ b/contact.html
@@ -72,4 +72,12 @@
             </div>
     </main>
         
+     <footer>
+         <div class="copyright">
+            <p>&copy; Copyright 2024. All Rights Reserved.</p>
+         </div>
+    </footer>
+        
     </body>
+
+</html>
