--- a/service.html
+++ b/service.html
@@ -28,7 +28,7 @@
 		
 		<header>
             <div class="tab-desk">
-              <a href="index.html"><img src="images/Furry Logo.png" alt="Furry fresh logo"></a>
+              <a href="index.html"><img src="images/banner.png" alt="Furry fresh logo"></a>
             </div>
             <div class="mobile">
                 <h3>"because every pup deserves to shine"</h3>
@@ -67,7 +67,13 @@
                                 <li>Extra Large Dogs (81+ lbs): $65</li>
                             </ul>
                         </td>
-                        <td>Includes a gentle shampoo bath, brushing, and blow-dry. Nail trim, ear cleaning, and a spritz of cologne. Great for dogs needing a freshen-up between full grooming sessions.</td>
+                        <td>
+                            <ul>
+                                <li>Includes a gentle shampoo bath, brushing, and blow-dry.</li>
+                                <li>Nail trim, ear cleaning, and a spritz of cologne.</li>
+                                <li>Great for dogs needing a freshen-up between full grooming sessions.</li>
+                            </ul>
+                        </td>
                     </tr>
                     
                     <tr><!-- Row 3 -->
