--- a/FAQS.html
+++ b/FAQS.html
@@ -34,6 +34,17 @@
                 <h1>Frequently Asked Questions</h1>
             </div>
         </header>
+        
+         <nav class="tab-desk">
+            <ul>
+                <li><a href="index.html">Home</a></li>  
+                <li><a href="about.html">About Us</a></li> 
+                <li><a href="services.html">Services</a></li> 
+                <li><a href="gallery.html">Gallery</a></li> 
+                <li><a href="faqs.html">FAQs</a></li> 
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
 
         <!-- Use the main area to add the main content to the webpage -->
         <main id="content">
