--- a/service.html
+++ b/service.html
@@ -92,7 +92,13 @@
                     <tr><!-- Row 4 -->
                         <td>Puppy's First Groom</td>
                         <td>All sizes: $40</td>
-                        <td>Gentle introduction to grooming for puppies. Focus on making it a fun, safe experience with lots of treats! Light bath, brushing, and nail trim.</td>
+                        <td>
+                            <ul>
+                                <li>Gentle introduction to grooming for puppies.</li>
+                                <li>Focus on making it a fun, safe experience with lots of treats!</li>
+                                <li>Light bath, brushing, and nail trim.</li>
+                            </ul>
+                        </td>
                     </tr>
                     
                      <tr><!-- Row 5 -->
@@ -105,7 +111,12 @@
                                 <li>Extra Large Dogs (81+ lbs): $55</li>
                             </ul>
                         </td>
-                        <td>Specialized treatment to reduce shedding for long-haired or double-coated dogs. Helpd minimize shedding at home and keeps coats healthy.</td>
+                        <td>
+                            <ul>
+                                <li>Specialized treatment to reduce shedding for long-haired or double-coated dogs.</li>
+                                <li>Help minimize shedding at home and keeps coats healthy.</li>
+                            </ul>
+                        </td>    
                     </tr>
                     
                      <tr><!-- Row 6 -->
