added about to index

--- a/index.html
+++ b/index.html
@@ -48,11 +48,21 @@
 
         <!-- Use the main area to add the main content to the webpage -->
         <main id="content">
-
+            <h2> About us:</h2>
             <div>
-                
+                Furry Fresh Grooming is a full-service dog grooming salon dedicated to pampering your pooch with top-tier care. Our mission is to provide a stress-free, enjoyable experience for both dogs and their owners, ensuring your pet leaves feeling clean, healthy, and stylish!
             </div>
+            <h4>Our Story</h4>
+            <div>
+            <p>It all began with a scruffy mutt named Max. Max was a beloved family pet, but his fur was a disaster. His owners tried everything - home baths, DIY grooming sessions, even a trip to the vet's office - but nothing seemed to tame his unruly coat.
 
+One day, while walking Max in the park, his owners met a woman with the most beautiful poodle they'd ever seen. The poodle's fur was silky, shiny, and perfectly groomed. Intrigued, they asked the woman for tips. She shared her secret: a passion for grooming and a mobile grooming van.
+
+Inspired, the owners decided to turn their love for animals into a business. They invested in a van, filled it with all the necessary grooming equipment, and named their new venture Furry Fresh Grooming. Their goal was simple: to provide top-notch grooming services to dogs of all shapes and sizes, right at their owners' doorsteps.
+
+Word of their mobile grooming service spread quickly. Soon, Furry Fresh Grooming was booked solid with appointments. Their friendly staff and gentle approach to grooming made dogs and their owners feel comfortable and relaxed. The van was equipped with everything a traditional grooming salon had to offer, including a bathing area, drying station, and grooming tables.
+
+As Furry Fresh Grooming grew, so did their reputation for exceptional service. They became known for their attention to detail, their use of high-quality products, and their commitment to making each grooming experience a positive one. And it all started with one scruffy mutt named Max.</p></div>
         </main>
 
         <footer>
