--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="nav-links">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
-                <a href="services.html">Services</a>
+                <a href="service.html">Services</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="faqs.html">FAQs</a>
                 <a href="contact.html">Contact Us</a>
@@ -39,7 +39,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>  
                 <li><a href="about.html">About Us</a></li> 
-                <li><a href="services.html">Services</a></li> 
+                <li><a href="service.html">Services</a></li> 
                 <li><a href="gallery.html">Gallery</a></li> 
                 <li><a href="faqs.html">FAQs</a></li> 
                 <li><a href="contact.html">Contact</a></li>
