--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
             <div id="nav-links">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
-                <a href="services.html">Services</a>
+                <a href="service.html">Services</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="faqs.html">FAQs</a>
                 <a href="contact.html">Contact Us</a>
@@ -38,7 +38,7 @@
         <nav class="tab-desk">
                 <a href="index.html">Home</a>  
                 <a href="about.html">About Us</a>
-                <a href="services.html">Services</a> 
+                <a href="service.html">Services</a> 
                 <a href="gallery.html">Gallery</a>
                 <a href="faqs.html">FAQs</a>
                 <a href="contact.html">Contact</a>
