--- a/gallery.html
+++ b/gallery.html
@@ -33,6 +33,16 @@
                 <h3>Gallery</h3>
             </div>
         </header>
+        
+         <nav class="tab-desk">
+            <ul>
+                <li><a href="index.html">Home</a></li>   
+                <li><a href="service.html">Services</a></li> 
+                <li><a href="gallery.html">Gallery</a></li> 
+                <li><a href="faqs.html">FAQs</a></li> 
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
 
         <!-- Use the main area to add the main content to the webpage -->
         <main id="content">
