--- a/appointments.html
+++ b/appointments.html
@@ -15,9 +15,20 @@
             <a href="service.html">Services</a>
             <a href="gallery.html">Gallery</a>
             <a href="FAQS.html">FAQs</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="appointments.html">Contact Us</a>
         </div>
     </nav>
+    
+    <!--Tab/Desktop Nav-->
+        <nav class="tab-desk">
+            <ul>
+                <li><a href="index.html">Home</a></li>  
+                <li><a href="service.html">Services</a></li> 
+                <li><a href="gallery.html">Gallery</a></li> 
+                <li><a href="faqs.html">FAQs</a></li> 
+                <li><a href="appointments.html">Contact</a></li>
+            </ul>
+        </nav>
     
     <main>
         <div id="contact">
