--- a/service.html
+++ b/service.html
@@ -18,7 +18,7 @@
                 <a href="service.html">Services</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="faqs.html">FAQs</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="appointments.html">Contact Us</a>
             </div>
             <a class="nav-icon" onclick="menu()">
                 <div id="icon">&#9776;</div>
@@ -39,7 +39,7 @@
                 <a href="service.html">Services</a> 
                 <a href="gallery.html">Gallery</a>
                 <a href="faqs.html">FAQs</a>
-                <a href="contact.html">Contact</a>
+                <a href="appointments.html">Contact</a>
         </nav>
 
         <!-- Use the main area to add the main content to the webpage -->
