--- a/FAQS.html
+++ b/FAQS.html
@@ -19,7 +19,7 @@
                 <a href="service.html">Services</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="faqs.html">FAQs</a>
-                <a href="appointments.html">Contact Us</a>
+                <a href="appointments.html">Appointments</a>
             </div>
             <a class="nav-icon" onclick="menu()">
                 <div id="icon">&#9776;</div>
@@ -41,7 +41,7 @@
                 <li><a href="service.html">Services</a></li> 
                 <li><a href="gallery.html">Gallery</a></li> 
                 <li><a href="faqs.html">FAQs</a></li> 
-                <li><a href="appointments.html">Contact</a></li>
+                <li><a href="appointments.html">Appointments</a></li>
             </ul>
         </nav>
 
