--- a/appointments.html
+++ b/appointments.html
@@ -26,7 +26,7 @@
                 <li><a href="service.html">Services</a></li> 
                 <li><a href="gallery.html">Gallery</a></li> 
                 <li><a href="faqs.html">FAQs</a></li> 
-                <li><a href="appointments.html">Contact</a></li>
+                <li><a href="appointments.html">Appointments</a></li>
             </ul>
         </nav>
     
