--- a/service.html
+++ b/service.html
@@ -58,7 +58,7 @@
                     <tr>
                         <!-- Row 1 -->
                         <th>Service</th>
-                        <th>Price</th>
+                        <th style="width: 30%">Price</th>
                         <th>Details</th>
                     </tr>
 
