--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		</nav> 
 		
 		<header>
-            <div class="tab-desk">
-              <a href="index.html"><img src="images/Furry Logo.png" alt="Furry fresh logo"></a>
+             <div class="tab-desk">
+                <a href="index.html"><img src="images/fb99b850-6748-419b-b42e-9334a1982e66.jpg" alt="Furry fresh logo"></a>
             </div>
             <div class="mobile">
                 <h3>"because every pup deserves to shine"</h3>
