--- a/appointments.html
+++ b/appointments.html
@@ -18,6 +18,12 @@
             <a href="appointments.html">Appointments</a>
         </div>
     </nav>
+        
+        <header>
+             <div class="tab-desk">
+                <a href="index.html"><img src="images/fb99b850-6748-419b-b42e-9334a1982e66.jpg" alt="Furry fresh logo"></a>
+            </div>
+        </header>
     
     <!--Tab/Desktop Nav-->
         <nav class="tab-desk">
