--- a/service.html
+++ b/service.html
@@ -29,7 +29,7 @@
 
         <header>
             <div class="tab-desk">
-                <a href="index.html"><img src="images/banner.png" alt="Furry fresh logo"></a>
+                <a href="index.html"><img src="images/fb99b850-6748-419b-b42e-9334a1982e66.jpg" alt="Furry fresh logo"></a>
             </div>
             <div class="mobile">
                 <h3>"because every pup deserves to shine"</h3>
@@ -39,6 +39,7 @@
         <nav class="tab-desk">
             
             <ul>
+                <!-- <li><img src="images/Untitled%20design.jpg" alt="Furry Fresh Logo"></li> -->
                 <li><a href="index.html">Home</a></li>
                 <li><a href="service.html">Services</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
