--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@ Word of their mobile grooming service spread quickly. Soon, Furry Fresh Grooming
 As Furry Fresh Grooming grew, so did their reputation for exceptional service. They became known for their attention to detail, their use of high-quality products, and their commitment to making each grooming experience a positive one. And it all started with one scruffy mutt named Max.</p></div>
         </main>
         
-<!-- A button to open the popup form -->
-<div class="popup" onclick="myFunction()"><img src="images/Paw-print.jpg">
-  <span class="popuptext" id="myPopup">Join Today!</span>
-</div>
 
+<!-- A button to open the popup form -->
+<button class="open-button" onclick="openForm()"><img src="images/CLICK%20HERE%20TO%20JOIN.png"></button>
+<button style="width=1000height= 1000"></button>
+<a href="POP%20up.html" class="open" role="button">POPUP</a>
+</div>
 </html>
         <footer>
          
