--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
                     <tr><!-- Row 3 -->
                         <td><a herf="gallery.html"><img src="images/trim with scissors.png" alt="groom scissors"></a>Meet Molly. This friendly pup is always smiling while she gets trimmed.</td>
                         <td><a herf="gallery.html"><img src="images/soapy dog.png" alt="groom pup"></a>This mature guy is Bear. His first appointment was three years ago, and he’s been coming back ever since.</td>
-                        <td><a href="gallery.html"><img src="images/IMG_5960.jpg" alt="puppy looking up"></a></td>
+                        <td><a href="gallery.html"><img src="images/Franklin.png" alt="puppy looking up"></a></td>
                     </tr>
                 </table>
             </div>
