--- a/service.html
+++ b/service.html
@@ -37,7 +37,7 @@
         </header>
 
         <nav class="tab-desk">
-            
+
             <ul>
                 <!-- <li><img src="images/Untitled%20design.jpg" alt="Furry Fresh Logo"></li> -->
                 <li><a href="index.html">Home</a></li>
@@ -168,6 +168,13 @@
                     <li>Paw and nose moisturizing</li>
                 </ul>
 
+                <h3>Additional Notes</h3>
+                <ul>
+                    <li>Prices may vary based on coat condition and temperment.</li>
+                    <li>Breed-specific styling may incur additional charges.</li>
+                    <li>Multiple add-on services may qualify for a package discount.</li>
+                </ul>
+
                 <h1>Extras:</h1>
                 <h3>Pet Bakery</h3>
                 <p>Freshly baked, dog-friendly treats available for purchase.</p>
@@ -180,8 +187,48 @@
                 <p>For convenience, Furry Fresh Grooming also offers mobile services that come to your doorstep! The mobile van is fully equipped with everything needed to give your dog a full spa treatment right outside your home.</p>
                 <h3>Hours:</h3>
                 <p>Monday-Saturday: 8:00am - 5:00pm</p>
-                
+                <h4>Our mobile grooming services bring the salon experience to your doorstep! For each of our
+                    standard services, we charge an additional fee for mobile grooming:</h4>
+                <ul>
+                    <li>Within 5 miles of our salon: $25</li>
+                    <li>5-10 miles from our salon: +$35</li>
+                    <li>10-15 miles from our salon: +$45</li>
+                    <li>15-20 miles from our salon: +$55</li>
+                </ul>
+                <h4>Additional Mobile Grooming Notes:</h4>
+                <ul>
+                    <li>A minimum charge of $75 applies to all mobile grooming appointments.</li>
+                    <li>Appointments may be subject to a fuel surcharge for distances greater than 20 miles from
+                        our salon.</li>
+                    <li>Mobile services are subject to availability and may require booking further in advance
+                        than in-salon appointments.</li>
+                    <li>Cancellation policy: 24-hour notice required to avoid a $50 cancellation fee.</li>
+                </ul>
+
             </div>
+
+            <div id="services-mobile" class="mobile">
+                <h1>Our Grooming Services</h1>
+                <p>(depending on dog size)</p>
+
+                <ul>
+                    <li>Basic Bath & Brush: $35-$65</li>
+                    <li>Full Grooming: $-55-$100</li>
+                    <li>Puppy's First Groom: $40</li>
+                    <li>De-Shedding Treatment $25-$55</li>
+                    <li>Deluxe Spa Package $75-$120</li>
+                    <li>Add-On Services:
+                        <ul>
+                            <li>Teeth Brushing: $10</li>
+                            <li>Flea & Tick Treatment: $15</li>
+                            <li>Special Skin Treatment: $20</li>
+                            <li>Paw and Nose Moisturizing: $10</li>
+                        </ul>
+                    </li>
+                </ul>
+
+            </div>
+
         </main>
 
         <footer>
