--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ As Furry Fresh Grooming grew, so did their reputation for exceptional service. T
         
 
 <!-- A button to open the popup form -->
-<button class="open-button" onclick="openForm()"><img src="images/CLICK%20HERE%20TO%20JOIN.png"></button>
+<button class="open-button" onclick="openForm()"><img src="images/CLICK%20HERE%20TO%20JOIN.png" alt="Pop Up"></button>
 <button style="width=1000height= 1000"></button>
 <a href="POP%20up.html" class="open" role="button">POPUP</a>
 </div>
