--- a/POP up.html
+++ b/POP up.html
@@ -41,7 +41,7 @@
 o 1 point for every $1 spent on grooming services.
 o 25 bonus points for referring a friend who completes their first grooming
 service.
-    o 10 bonus points on your pet's birthday month.</h5>
+    10 bonus points on your pet's birthday month.</h5>
 <h6>Redeeming Rewards:
 • 100 Points: $5 off any service.
 • 250 Points: Free nail trim or teeth brushing.
