--- a/appointments.html
+++ b/appointments.html
@@ -17,6 +17,9 @@
             <a href="FAQS.html">FAQs</a>
             <a href="appointments.html">Appointments</a>
         </div>
+        <a class="nav-icon" onclick="menu()">
+                <div id="icon">&#9776;</div>
+            </a>
     </nav>
         
         <header>
