--- a/service.html
+++ b/service.html
@@ -262,6 +262,28 @@
                 <h3>Doggie Daycare</h3>
                 <p>While your pup is being groomed, they can enjoy supervised playtime with other dogs.</p>
 
+                <h1>Mobile Grooming</h1>
+                <p>For convenience, Furry Fresh Grooming also offers mobile services that come to your doorstep! The mobile van is fully equipped with everything needed to give your dog a full spa treatment right outside your home.</p>
+                <h3>Hours:</h3>
+                <p>Monday-Saturday: 8:00am - 5:00pm</p>
+                <h3>Our mobile grooming services bring the salon experience to your doorstep! For each of our
+                    standard services, we charge an additional fee for mobile grooming:</h3>
+                <ul>
+                    <li>Within 5 miles of our salon: $25</li>
+                    <li>5-10 miles from our salon: +$35</li>
+                    <li>10-15 miles from our salon: +$45</li>
+                    <li>15-20 miles from our salon: +$55</li>
+                </ul>
+                <h3>Additional Mobile Grooming Notes:</h3>
+                <ul>
+                    <li>A minimum charge of $75 applies to all mobile grooming appointments.</li>
+                    <li>Appointments may be subject to a fuel surcharge for distances greater than 20 miles from
+                        our salon.</li>
+                    <li>Mobile services are subject to availability and may require booking further in advance
+                        than in-salon appointments.</li>
+                    <li>Cancellation policy: 24-hour notice required to avoid a $50 cancellation fee.</li>
+                </ul>
+                
             </div>
                 
             </section>
