--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="service.html">Services</a></li> 
                 <li><a href="gallery.html">Gallery</a></li> 
                 <li><a href="faqs.html">FAQs</a></li> 
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="appointments.html">Appoinments</a></li>
             </ul>
         </nav>
 
