--- a/template.html
+++ b/template.html
@@ -4,7 +4,9 @@
 	<title>Furry Fresh Grooming</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-    
+    <link rel="shortcut icon" href="images/CLICK%20HERE%20TO%20JOIN%20(48%20x%2048%20px).png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/CLICK%20HERE%20TO%20JOIN%20(180%20x%20180%20px).png">
+    <link rel="icon" sizes="192x192" href="images/CLICK%20HERE%20TO%20JOIN%20(192%20x%20192%20px).png">
 </head>
 
 <body>
