--- a/POP up.html
+++ b/POP up.html
@@ -31,8 +31,10 @@
         </nav>
     
     <main>
-        <div id="contact">
-            <a herf="POP up.html"><img src="images/Paw-print.jpg" alt="paw-print" width="200" height="200">
+            <div 1>
+            <img src="images/Paw-print.jpg" alt="paw-print" style="height: 150px; width:150px; position: relative;">
+            </div>
+            <div id="contact">
 			<h2>Welcome to our Paw-Print Rewards Program!</h2> 					
                 <h4 Paw-Print Rewards Program: Earn points with every visit and redeem them fordiscounts or free services.></h4>
 <h5>How It Works:
