--- a/index.html
+++ b/index.html
@@ -65,16 +65,15 @@ As Furry Fresh Grooming grew, so did their reputation for exceptional service. T
         
 
 <!-- A button to open the popup form -->
-<<<<<<< HEAD
+    <div id="3">
     <a href="POP%20up.html">
       <img src="images/CLICK%20HERE%20TO%20JOIN.png" alt="popup" style="height: 250px; width:250px;">
 </a>
+        </div>
+        <div id="4">
     <p> Click the image to see our Paw-Print Rewards Program!</p>
-=======
-<button class="open-button" onclick="openForm()"><img src="images/CLICK%20HERE%20TO%20JOIN.png" alt="Pop Up"></button>
-<button style="width=1000; height= 1000"></button>
-<a href="POP%20up.html" class="open" role="button">POPUP</a>
->>>>>>> aea2803321976478b50b0bb675a2dc78e758cb58
+    </div>
+
 </div>
         <footer>
          
