--- a/appointments.html
+++ b/appointments.html
@@ -37,7 +37,7 @@
                 <li><a href="index.html">Home</a></li>  
                 <li><a href="service.html">Services</a></li> 
                 <li><a href="gallery.html">Gallery</a></li> 
-                <li><a href="faqs.html">FAQs</a></li> 
+                <li><a href="FAQS.html">FAQs</a></li> 
                 <li><a href="appointments.html">Appointments</a></li>
             </ul>
         </nav>
