--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>
                 <a href="service.html">Services</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="faqs.html">FAQs</a>
+                <a href="FAQS.html">FAQs</a>
                 <a href="contact.html">Contact Us</a>
             </div>
             <a class="nav-icon" onclick="menu()">
@@ -41,7 +41,7 @@
                 <li><a href="index.html">Home</a></li>   
                 <li><a href="service.html">Services</a></li> 
                 <li><a href="gallery.html">Gallery</a></li> 
-                <li><a href="faqs.html">FAQs</a></li> 
+                <li><a href="FAQS.html">FAQs</a></li> 
                 <li><a href="appointments.html">Appoinments</a></li>
             </ul>
         </nav>
