--- a/service.html
+++ b/service.html
@@ -21,7 +21,7 @@
                 <a href="index.html">Home</a>
                 <a href="service.html">Services</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="faqs.html">FAQs</a>
+                <a href="FAQS.html">FAQs</a>
                 <a href="appointments.html">Appointments</a>
             </div>
             <a class="nav-icon" onclick="menu()">
@@ -46,7 +46,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="service.html">Services</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="faqs.html">FAQs</a></li>
+                <li><a href="FAQS.html">FAQs</a></li>
                 <li><a href="appointments.html">Appointments</a></li>
             </ul>
 
