--- a/index.html
+++ b/index.html
@@ -90,3 +90,4 @@ As Furry Fresh Grooming grew, so did their reputation for exceptional service. T
 	<script src="scripts/script.js"></script>
 </div>
 </body>
+</html>
