i wanna be done with this

--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,8 @@
                 <a href="index.html"><img src="images/fb99b850-6748-419b-b42e-9334a1982e66.jpg" alt="Furry fresh logo"></a>
             </div>
             <div class="mobile">
+                <a href="index.html"><img src="images/fb99b850-6748-419b-b42e-9334a1982e66.jpg" alt="Furry fresh logo"></a>
+                <h3>"because every pup deserves to shine"</h3>
                 <h3>Gallery</h3>
             </div>
         </header>
