--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="service.html">Services</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="FAQS.html">FAQs</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="appointments.html">Appointments</a>
             </div>
             <a class="nav-icon" onclick="menu()">
                 <div id="icon">&#9776;</div>
@@ -32,6 +32,7 @@
                 <a href="index.html"><img src="images/fb99b850-6748-419b-b42e-9334a1982e66.jpg" alt="Furry fresh logo"></a>
             </div>
             <div class="mobile">
+                <a href="index.html"><img src="images/fb99b850-6748-419b-b42e-9334a1982e66.jpg" alt="Furry fresh logo"></a>
                 <h3>"because every pup deserves to shine"</h3>
             </div>
         </header>
@@ -42,7 +43,7 @@
                 <li><a href="service.html">Services</a></li> 
                 <li><a href="gallery.html">Gallery</a></li> 
                 <li><a href="FAQS.html">FAQs</a></li> 
-                <li><a href="appointments.html">Appoinments</a></li>
+                <li><a href="appointments.html">Appointments</a></li>
             </ul>
         </nav>
 
