--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ As Furry Fresh Grooming grew, so did their reputation for exceptional service. T
 <!-- A button to open the popup form -->
     <div id="3">
     <a href="POP-up.html">
-      <img src="images/CLICK%20HERE%20TO%20JOIN.png" alt="popup" style="height: 250px; width:250px;">
+      <img id="pop-upimg" src="images/CLICK%20HERE%20TO%20JOIN.png" alt="popup" style="height: 250px; width:250px;">
 </a>
         </div>
         <div id="4">
