--- a/FAQS.html
+++ b/FAQS.html
@@ -52,21 +52,21 @@
         <main id="content">
 
             <div id="questions">
-                <p onclick="ans1()">How can I determine if a baby animal is an orphan?</p>
-                <p onclick="ans2()">How can I tell if an animal has rabies?</p>
-                <p onclick="ans3()">I found a baby bird that fell from its nest. Will the parents orphan it if I touch it?</p>
-                <p onclick="ans4()"></p>
-                <p onclick="ans5()"></p>
-                <p onclick="ans6()"></p>
-                <p onclick="ans7()"></p>
-                <p onclick="ans8()"></p>
-                <p onclick="ans9()"></p>
-                <p onclick="ans10()"></p>
-                <p onclick="ans11()"></p>
-                <p onclick="ans12()"></p>
-                <p onclick="ans13()"></p>
-                <p onclick="ans14()"></p>
-                <p onclick="ans15()"></p>
+                <p onclick="ans1()">1. What services do you offer?</p>
+                <p onclick="ans2()">2. How often should my dog be groomed?</p>
+                <p onclick="ans3()">3. How long does a grooming session take?</p>
+                <p onclick="ans4()">4. Do I need to make an appointment in advance?</p>
+                <p onclick="ans5()">5. What if my dog is nervous or anxious about grooming?</p>
+                <p onclick="ans6()">6. What do I need to do before my dog’s appointment?</p>
+                <p onclick="ans7()">7. Do you offer mobile grooming services?</p>
+                <p onclick="ans8()">8. What products do you use?</p>
+                <p onclick="ans9()">9. What happens if my dog has fleas or ticks?</p>
+                <p onclick="ans10()">10. Can I stay with my dog during the grooming session?</p>
+                <p onclick="ans11()">11. Do you groom puppies?</p>
+                <p onclick="ans12()">12. What is your cancellation policy?</p>
+                <p onclick="ans13()">13. How do I book an appointment?</p>
+                <p onclick="ans14()">14. Do you groom all dog breeds?</p>
+                <p onclick="ans15()">15. What are your payment options?</p>
             </div>
 
             <div id="answer">
